# pale-blue-dot

./: .pbd-harness.yaml  CLAUDE.md  Plans.archive.md  Plans.md  README.md  SECURITY_REPORT.md  index.html  package-lock.json  package.json  pencil-new.pen  vite.config.ts  vitest.config.ts
.claude/agents/: advisor.md  reviewer.md  worker.md
.claude/monitors/: monitors.json
.claude/output-styles/: pbd-ops.md
.claude/rules/: commit-safety.md  mcp-type-sync.md  normalized-state.md  plans-management.md  reader-mobile-runtime.md  service-layer.md  test-quality.md
.claude/templates/: plans-phase.md  worker-report.json
.github/workflows/: eas-build.yml  release.yml
benchmarks/: .gitkeep  PERFORMANCE_SUMMARY.md
docs/: editor-perf-analysis.md  index.html
mcp-pale-blue-dot-server/: EXAMPLE_COMMANDS.md  README.md  SETUP_KR.md  claude_desktop_config.example.json  package-lock.json  package.json  tsconfig.json
mcp-pale-blue-dot-server/src/: index.ts
reader-mobile/: .gitignore  PLAN-syntax-highlighting.md  README.md  app.config.js  app.json  build-and-install.sh  eas.json  global.d.ts  package-lock.json  package.json
reader-mobile/__tests__/: highlight-edit.test.js  highlight-render.test.js  highlight-render.test.ts  insert-highlight.test.js  memo-crud.test.js
reader-mobile/app/: _layout.tsx  config.tsx  index.tsx
reader-mobile/assets/: README.md
reader-mobile/components/: Logo.tsx  MarkdownRenderer.tsx
reader-mobile/constants/: colors.ts  (+1 more)
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
workspace-template/: README.md
(+75 files in other folders)
