[package]
name = "my-kanban"
version = "0.7.2"
description = "A local file-based Kanban board"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
which = "6"
wait-timeout = "0.2"
notify = "6"
notify-debouncer-full = "0.3"
unicode-normalization = "0.1"
